Changed year in footer template to show current year based on server time.

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Layout/footer.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Layout/footer.html.twig
@@ -108,7 +108,7 @@
         <div class="web__line">
             <footer class="web__container web__container--transparent footer-bottom">
                 <div class="footer-bottom__copyright dont-print">
-                    {{ 'Copyright © 2019, Shopsys s.r.o. Všechna práva vyhrazena.'|trans }}
+                    {{ 'Copyright © ' ~ 'now'|date('Y') ~ ', Shopsys s.r.o. Všechna práva vyhrazena.'|trans }}
                 </div>
                 <div class="footer-bottom__shopsys dont-print">
                     {{ 'E-shop na míru od'|trans }}
