--- a/app/Resources/ShopsysFrameworkBundle/views/Admin/Content/Brand/listGrid.html.twig
+++ b/app/Resources/ShopsysFrameworkBundle/views/Admin/Content/Brand/listGrid.html.twig
@@ -1,7 +1,7 @@
 {% extends '@!ShopsysFramework/Admin/Content/Brand/listGrid.html.twig' %}
 
 {% block grid_action_cell_type_delete %}
-        {% if row.b.type == constant('Shopsys\\ShopBundle\\Model\\Product\\Brand\\Brand::TYPE_MAIN_BUSHMAN') %}
+        {% if row.b.type == constant('Shopsys\\ShopBundle\\Model\\Product\\Brand\\Brand::TYPE_MAIN_SHOPSYS') %}
         <span title="{{ 'Tuhle značku není možné smazat. Jde o značku, která je automaticky přiřazena všem produktem.'|trans }}"
             class="js-tooltip cursor-help in-icon in-icon--info" data-toggle="tooltip" data-placement="bottom"
         >
