--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/detail.html.twig
@@ -51,12 +51,10 @@
             <div class="web__container">
                 <div class="box-articles box-articles--with-border">
                     <h2 class="box-articles__title-big">
-                        {{ 'Inspiraci hledej v příbězích'|trans }}
+                        {{ 'Články k přečtení'|trans }}
                     </h2>
                     <div class="box-articles__title-small">
-                        {{ 'V hlavní roli'|trans }}
-                        {{ product.name }}.
-                        {{ 'Přečti si více'|trans }}:
+                        {{ 'O produktu %s se dozvíte více v těchto článcích:'|trans|format(product.name) }}
                     </div>
                     {% include '@ShopsysShop/Front/Content/Article/list.html.twig' with { blogArticles: productBlogArticles } %}
                     <div class="box-articles__bottom box-articles__bottom--small-gap">
