[TK-39641] Changed Contact page to Shopsys info.

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/AboutUs/info.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/AboutUs/info.html.twig
@@ -44,11 +44,7 @@
             <div class="wrap-article">
                 <div class="wrap-article__row">
                     <div class="wrap-article__row__half padding-right-20">
-                        {% if domainId == 2 %}
-                            <img src="{{ asset('/assets/frontend/images/design/contact-sk.jpg')}}">
-                        {% else %}
-                            <img src="{{ asset('/assets/frontend/images/design/contact.png')}}">
-                        {% endif %}
+                        <img src="{{ asset('/assets/frontend/images/design/contact.png')}}" alt="{{ 'Sídlo'|trans }}">
                     </div>
                     <div class="wrap-article__row__half">
                         {% if domainId != 2 %}
@@ -59,15 +55,14 @@
                             </div>
                             <div class="wrap-article__row padding-bottom-20">
                                 <div class="wrap-article__row__half">
-                                    {{ 'Administrativní areál BUSHMAN'|trans }}<br>
-                                    {{ 'Městečko - Nespeky č.p. 75'|trans }}<br>
-                                    {{ '257 22 Čerčany'|trans }}<br>
+                                    {{ 'Shopsys s.r.o.'|trans }}<br>
+                                    {{ 'Koksární 1096/10'|trans }}<br>
+                                    {{ '702 00 Ostrava'|trans }}<br>
                                 </div>
                                 <div class="wrap-article__row__half">
-                                    {{ 'Pondělí až pátek 9–15 hod'|trans }}<br>
-                                    {{ 'tel.: +420 317 712 400'|trans }}<br>
-                                    {{ 'fax: +420 317 712 499'|trans }}<br>
-                                    {{ 'office@bushman.cz'|trans }}<br>
+                                    {{ 'Pondělí až pátek 8:00 – 16:00'|trans }}<br>
+                                    {{ 'tel.: +420 595 177 177'|trans }}<br>
+                                    {{ 'info@shopsys.com'|trans }}<br>
                                 </div>
                             </div>
                         {% endif %}
@@ -76,54 +71,23 @@
                                 <h4>{{ 'Sídlo'|trans }}</h4>
                             </div>
                         </div>
-                        {% if domainId == 2 %}
-                            <div class="wrap-article__row">
-                                <div class="wrap-article__row__half">
-                                    {{ 'Bushman Trade s.r.o.'|trans }}<br>
-                                    {{ 'Stará Vajnorská 11'|trans }}<br>
-                                    {{ '831 04 Bratislava'|trans }}<br>
-                                    {{ 'IČO: 51704501, IČ DPH: SK2120761621'|trans }}<br><br>
-                                    {{ 'Tel'|trans }}: <a href="tel:00421908767330" class="underline-small">{{ '00421/908767330'|trans }}</a><br><br>
-                                    <a href="mailto:obchod@bushman.sk" class="underline-small">{{ 'obchod@bushman.sk'|trans }}</a><br>
-                                </div>
-                                <div class="wrap-article__row__half">
-                                    {{ 'Spoločnosť zapísaná v obchodnom registri Okresného súdu Bratislava I, oddiel Sro, vložka č. 128258/B.'|trans }}
-                                </div>
+                        <div class="wrap-article__row padding-bottom-20">
+                            <div class="wrap-article__row__half">
+                                {{ 'Shopsys s.r.o.'|trans }}<br>
+                                {{ 'Koksární 1096/10, 702 00 Ostrava'|trans }}<br>
+                                {{ 'IČ: 27790487, DIČ: CZ27790487'|trans }}<br>
                             </div>
-                        {% else %}
-                            <div class="wrap-article__row padding-bottom-20">
-                                <div class="wrap-article__row__half">
-                                    {{ 'Bushman Company a.s.'|trans }}<br>
-                                    {{ 'Lazarská 5/1719, 110 00 Praha 1'|trans }}<br>
-                                    {{ 'IČ: 26052679, DIČ: CZ26052679'|trans }}<br>
-                                </div>
-                                <div class="wrap-article__row__half">
-                                    {{ 'Firma zapsaná v obchodním rejstříku vedeném Městským soudem v Praze, oddíl B, vložka 8948.'|trans }}
-                                </div>
+                            <div class="wrap-article__row__half">
+                                {{ 'Spisová značka C 51890 vedená u rejstříkového soudu v Ostravě.'|trans }}
                             </div>
-                            <div class="wrap-article__row">
-                                <div class="wrap-article__row__half">
-                                    {{ 'LP Komfort s.r.o.'|trans }}<br>
-                                    {{ 'Lazarská 5/1719, 110 00 Praha 1'|trans }}<br>
-                                    {{ 'IČ: 25618601, DIČ: CZ25618601'|trans }}<br>
-                                </div>
-                                <div class="wrap-article__row__half">
-                                    {{ 'Firma zapsaná v obchodním rejstříku vedeném Městským soudem v Praze, oddíl C, vložka 55269.'|trans }}
-                                </div>
-                            </div>
-                        {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="wrap-article">
                 <div class="wrap-article__row">
                     <div class="wrap-article__row__full">
-                        {% if domainId == 2 %}
-                            {% set mapSource = 'https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10640.142207168987!2d17.1655044!3d48.1866665!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdb45bc57390ef3c6!2sBushman%20Factory-Outlet!5e0!3m2!1scs!2scz!4v1573820168929!5m2!1scs!2scz' %}
-                        {% else %}
-                            {% set mapSource = 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.5853368987177!2d14.673543315559575!3d49.850248479397116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b871241bc86ab%3A0xb8fdb42aee6cdd!2sBushman+Company+a.s.!5e0!3m2!1scs!2scz!4v1564350162889!5m2!1scs!2scz' %}
-                        {% endif %}
-                        <iframe src="{{ mapSource }}" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.1994196953005!2d18.27169985142554!3d49.85749853769071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e3435efe398b%3A0xee211417a7b2e7ea!2sShopsys!5e0!3m2!1scs!2scz!4v1579251202357!5m2!1scs!2scz" width="100%" height="450" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
