design: change color of availability date and play icon

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/detail.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/detail.less
@@ -151,6 +151,14 @@
             white-space: nowrap;
         }
 
+        &__date {
+            color: @color-green;
+
+            &--not-available {
+                color: @color-gray;
+            }
+        }
+
         &__next-line {
             display: block;
         }
