--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/gallery.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/gallery.less
@@ -126,7 +126,7 @@
                     left: 50%;
                     transform: translate(-50%, -50%);
 
-                    background-color: @color-orange;
+                    background-color: @color-add;
                     border-radius: 50%;
                 
                     &__icon {
