--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/variants.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/variants.less
@@ -28,12 +28,12 @@
     &__item {
         display: flex;
         align-items: center;
+        justify-content: center;
         min-width: @list-variants-item-size;
         height: @list-variants-item-size;
         line-height: @list-variants-item-size - 4px;
         margin: 0 @list-variants-item-gap @list-variants-item-gap 0;
         padding: 0 @list-variants-item-padding;
-        text-align: center;
 
         font-size: 13px;
         font-weight: 700;
