--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/user-text.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/user-text.less
@@ -22,8 +22,8 @@
         text-decoration: none;
 
         color: @color-base;
-        background-image: linear-gradient(to top, @color-orange 1px, @color-f 100%);
-        background-position: 0 28px;
+        background-image: linear-gradient(to top, @color-gray-light 1px, @color-f 100%);
+        background-position: 0 23px;
         background-repeat: repeat-x;
         background-size: 2px 1px;
         transition: background-position @transition;
