--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/core/variables.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/core/variables.less
@@ -67,6 +67,7 @@
 
 @color-black: #181a22;
 @color-pink: #ff91fa;
+@color-gray-light: #d7d9da;
 @color-gray: #8991a3;
 @color-gray-dark: #384149;
 @color-orange: #ffa500;
