--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/helpers/main.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/helpers/main.less
@@ -33,7 +33,7 @@
         left: 0;
         bottom: -@underline-gap;
 
-        background-color: #d7d9da;
+        background-color: @color-gray-light;
         transition: bottom @transition;
     }
 
@@ -68,7 +68,7 @@
     display: inline;
     padding-bottom: 10px;
 
-    background-image: linear-gradient(to top, #d7d9da 1px, @color-f 100%);
+    background-image: linear-gradient(to top, @color-gray-light 1px, @color-f 100%);
     background-position: 0 21px;
     background-repeat: repeat-x;
     background-size: 2px 1px;
@@ -92,7 +92,7 @@
         left: 0;
         bottom: -2px;
 
-        background-color: #d7d9da;
+        background-color: @color-gray-light;
     }
 
     &:hover {
