--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/list.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/list.html.twig
@@ -23,7 +23,7 @@
         {% if visibleChildren is not empty %}
             <div class="web__line">
                 <div class="web__container">
-                    {% include '@ShopsysShop/Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren} %}
+                    {% include '@ShopsysShop/Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'cssClass': 'list-categories--six-on-row'} %}
                 </div>
             </div>
         {% endif %}
