design: change size of gap in blog and breadcrumb

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
@@ -62,7 +62,7 @@
     &__title {
         display: block;
         text-align: center;
-        margin: 33px auto;
+        margin: 0 auto 33px;
 
         color: @color-base;
         font-weight: 700;
