--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/productListMacro.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/productListMacro.html.twig
@@ -102,6 +102,7 @@
 {% endmacro %}
 
 {% macro horizontalList(products, variantsIndexedByMainVariantId, listCssClass = 'list-products', productHeadingTagName, type) %}
+    {% import '@ShopsysShop/Front/Inline/Product/productFlagsMacro.html.twig' as productFlags %}
     <div class="{{ listCssClass }} js-horizontal-list" data-type="{{ type }}" data-count-of-product="{{ products|length }}">
 
         <span class="{{ listCssClass }}__arrow {{ listCssClass }}__arrow--prev js-horizontal-list-action-prev">
@@ -115,9 +116,11 @@
                 {% for product in products %}
                     <div class="{{ listCssClass }}__item">
                         <div class="{{ listCssClass }}__item__in">
+                            {% set productSellingPrice = getProductSellingPrice(product) %}
                             <a href="{{ url('front_product_detail', {'id': product.id}) }}" class="{{ listCssClass }}__item__block">
                                 <div class="{{ listCssClass }}__item__image dont-print">
                                     {{ image(product.productForCreatingImageAccordingToVariant, { size: 'list', alt: product.name, lazy: true }) }}
+                                    {{ productFlags.list(getProductFlagsWithFreeTransportAndPaymentFlag(productSellingPrice, product, 1), 'in-flag--in-list') }}
                                 </div>
 
                                 <div class="{{ listCssClass }}__item__info">
