[US-7507] order: validate SK phone number as DE phone number

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Layout/base.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Layout/base.html.twig
@@ -20,6 +20,7 @@
         <link rel="stylesheet" type="text/css" href="{{ asset('assets/frontend/styles/print' ~ getDomain().id ~ '_' ~ getCssVersion() ~ '.css') }}" media="print">
         <script>
             var isGermanDomain = '{{ isGermanyDomain() }}' == 1;
+            var isSlovakDomain = '{{ isSlovakDomain() }}' == 1;
         </script>
         {# bootstrap/tooltip.js must be imported before bootstrap/popover.js #}
         {{ importJavascripts([
