--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/socials.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/socials.less
@@ -34,6 +34,10 @@
             width: calc(~"@{calc-base}/3");
 
             border-right: 1px solid @color-gray;
+
+            .list-socials--two-items & {
+                width: calc(~"@{calc-base}/2");
+            }
         }
 
         &:last-child {
