introduction of read-model layer for FE product lists
- see https://github.com/shopsys/shopsys/pull/1018
- the data for lists are taken from Elasticsearch (seehttps://github.com/shopsys/shopsys/pull/1096)
	- list by category
	- search results
	- accessories in "after-add-to-cart" window (currently disabled module)
- added "main_variant_group_products" field to Elasticsearch index and to ListedProductView
	- represented by new read-model object - MainVaraintGroupProductView
	- thanks to that, there is no need to pass "productsIndexedByMainVariantGroup" to productListMacro anymore
- added "second_distinguishing_parameter_values" to Elasticsearch index and to ListedProductView
	- thanks to that, there is no need to pass "variantsIndexedByMainVariantId" to productListMacro anymore
- ImageExtension now need to extend read-model/ImageExtension that extends framework/ImageExtension (the original one)
- added CartController::productActionAction() even though it is not used at the moment (we will need it in the future on B2CCC project)
- added sk translations to AvailabilityDataFixture to prevent tests from failing
- definitions of twig extensions removed from services.yml - they are auodiscovered and autoconfigured thanks to services/twig.yml setting
- ProductOnCurrentDomainElasticFacade::getSearchAutocompleteProducts is copy-pasted from the parent and must not use parent's getPaginatedProductsForSearch() anymore
	- autocomplete.html.twig expects array of Products and getPaginatedProductsForSearch() now returns array with data from Elasticsearch
	- there is no read-model object for representing autocomplete results and we do not need it here at the moment (however, it could be nice to have it for performance boost)
- services.yml: removed definition of framework/ProductSearchExportRepository as the class does not exist anymore (it was renamed to ProductSearchExportWithFilterRepository)

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/productsWithControls.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/productsWithControls.html.twig
@@ -21,7 +21,7 @@
         {% set entityName = 'products'|trans %}
         {{ paginator.paginatorNavigation(paginationResult, entityName) }}
 
-        {{ productList.list(paginationResult.results, variantsIndexedByMainVariantId, mainVariantsIndexedByMainVariantGroup) }}
+        {{ productList.list(paginationResult.results) }}
 
         <div class="text-center margin-bottom-20">
             {{ paginator.loadMoreButton(paginationResult) }}
