design: edit position of search input on mobile

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/dropdown.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/dropdown.less
@@ -213,6 +213,7 @@
             width: 300px;
 
             @media @query-md {
+                left: -90px;
                 right: -320px;
                 width: 445px;
             }
