all horizontal product lists use read-model objects (ListedProductView) instead of Product entities
- i.e. productList.horizontalList() macro now works with ListedProductView objects
- best selling products - postgres is queried only once, then the ids are stored in cache, and product data are now fecthed from Elasticsearch
- last visited products - data are now fetched from Elasticsearch
- top products on homepage and in cart - data are still fetched from postgres (but then transferred to ListedProductViews)
- accessories on product detail - data are still fetched from postgres (but then transferred to ListedProductViews)
- added "main_variant_id" field to Elasticsearch index to ensure proper rendering of product images
	- Product::getProductForCreatingImageAccordingToVariant() was originally used in productList.horizontalList() macro

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/detail.html.twig
@@ -40,7 +40,7 @@
                     <h2 class="in-title in-title--big in-title--center box-accessories__title">
                         {{ accessoriesHeadline }}
                     </h2>
-                    {{ productList.horizontalList(accessories, [], "list-accessories-products", 'h3', 'accessories-products') }}
+                    {{ productList.horizontalList(accessories, "list-accessories-products", 'h3', 'accessories-products') }}
                 </div>
             </div>
         </div>
