--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Order/sent.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Order/sent.html.twig
@@ -79,10 +79,10 @@
         <div class="web__container">
             <div class="box-articles">
                 <h2 class="box-articles__title-big">
-                    {{ 'Načerpejte inspiraci'|trans }}
+                    {{ 'Shopsys magazín'|trans }}
                 </h2>
                 <div class="box-articles__title-small">
-                    {{ 'Zážitky z cest si nenecháváme pro sebe'|trans }}
+                    {{ 'Představujeme trendy, radíme jak trénovat a ukazujeme naši firmu'|trans }}
                 </div>
                 {% include '@ShopsysShop/Front/Content/Article/list.html.twig' with { blogArticles: homepageBlogArticles } %}
                 <div class="box-articles__bottom">
